<resources>


    <!-- common -->
    <string name="exit">Press the back key again to exit the app</string>
    <string name="tongbukz_on">SYNCHR ON</string>
    <string name="tongbukz_off">SYNCHR OFF</string>

    <string name="text_enter">Enter</string>
    <string name="blue_equipment">Bluetooth device</string>
    <string name="search_blue_equipment">Scan Nearby Bluetooth devices</string>
    <string name="searching">searching...</string>

    <string name="connecting">connecting...</string>
    <string name="please_input">Please enter a number</string>


    <string name="device_no_connected">Device Not Connected</string>
    <string name="device_disconnect">Device disConnected please reconnected</string>
    <string name="debug_switch">debug switch</string>


    <!-- dialog -->
    <string name="connected_failed">The connection failed. Please try to reconnect</string>
    <string name="dialog_title_disconnect">Disconnected or not</string>
    <string name="dialog_negetive">cancel</string>
    <string name="dialog_positive">sure</string>
    <string name="dialog_confirm">Confirm</string>


    <!-- 蓝牙设备/设置界面 -->
    <string name="connecting_device">Connect Device</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="click_to_connect">Click to connect</string>
    <string name="lighting_time">Lighting time</string>
    <string name="switch_language">Switch Language</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="fault_debugging">Troubleshooting</string>
    <string name="fault_part">Faulty component</string>
    <string name="fault_type">Fault type</string>
    <string name="alarm">Alarm setting</string>
    <string name="sync">Sync control</string>


    <!-- 蓝牙设备/设置界面 -->
    <string name="setting_title">Setting</string>

    <string name="open_alarm">Open</string>
    <string name="close_alarm">Close</string>
    <string name="sde_dialog_btn_cancel">Cancel</string>


    <!-- 蓝牙设置 -->
    <string name="no_contect_right">not connected</string>


    <string name="agree">Click enter as agreed</string>
    <string name="ysi">privacy policy</string>


    <!-- 快捷 -->
    <string name="jiyi">Memory</string>
    <string name="jiyi1">M1</string>
    <string name="jiyi2">M2</string>
    <string name="kandianshi">Watch TV</string>
    <string name="lingyali">Zero Gravity</string>
    <string name="zhihan">Anti Snore</string>
    <string name="fuyuan">Flat Bed</string>
    <string name="tingyinyue">Music</string>
    <string name="tuibufangsong">Leg Relax</string>
    <string name="dingyao">Lumbar</string>
    <string name="fenti">Split</string>
    <string name="tongbu">Sync</string>
    <string name="yujia">YOGA</string>
    <string name="yijianshengqi">Rise</string>
    <string name="yijianjiangxia">Decline</string>
    <string name="houqing">Tilt Backward</string>
    <string name="qianqing">Tilt forward</string>
    <string name="zhengtishangsheng">Rise</string>
    <string name="zhengtixiajiang">Decline</string>
    <string name="zhengtifuyuan">All Flat</string>


    <!-- 微调 -->
    <string name="beibutiaozheng">BACK</string>
    <string name="tunbutiaozheng">HIP</string>
    <string name="toubutiaozheng">HEAD</string>
    <string name="tuibutiaozheng">LEG</string>
    <string name="yaobutiaozheng">LUMBAR</string>
    <string name="beituitiaozheng">BACK LEG</string>
    <string name="zhengtishengjiang">LIFT</string>
    <string name="zhengtiqingxie">TILT</string>

    <string name="quanshenxunhuan">FULL CYCLE</string>
    <string name="tunbuxunhuan">HIP CYCLE</string>
    <string name="toubuxunhuan">HEAD CYCLE</string>
    <string name="tuibuxunhuan">LEG CYCLE</string>
    <string name="yaobuxunhuan">LUMBAR CYCLE</string>
    <string name="beibuxunhuan">BACK CYCLE</string>
    <string name="beituixunhuan">BACK/LEG CYCLE</string>


    <!-- 灯光 -->
    <string name="dengguangshijian">Lighting time</string>
    <string name="tenfenzhong">10Mins</string>
    <string name="eightxiaoshi">8Hours</string>
    <string name="tentxiaoshi">10Hours</string>
    <string name="dengguangliangdu">Brightness</string>
    <string name="dengguangliangdu_min_tips">The current brightness has been set to the lowest</string>
    <string name="dengguangliangdu_max_tips">The current brightness has been adjusted to the maximum</string>


    <!-- 按摩 -->
    <string name="anmopingdonghuaqu">MASSAGE</string>
    <string name="anmopinglv">Mass Wave</string>
    <string name="toubuanmo">Back Mass</string>
    <string name="zubuanmo">Leg Mass</string>
    <string name="tenmin">10min</string>
    <string name="twentymin">20min</string>
    <string name="thirtymin">30min</string>




    <string name="Bluetooth_connection_failed">Bluetooth connection failed</string>
    <string name="Disconnect_not">Disconnect or not</string>
    <string name="unlink">Bluetooth disconnected</string>
    <string name="linked">Bluetooth connected</string>
    <string name="opens">open</string>
    <string name="close">close</string>
    <string name="bluetoothretry">The device is currently connected. Please disconnect and try again</string>
    <string name="saomiaozhong">Scanning or Click Enter</string>
    <string name="saomiao">Scanning nearby Bluetooth devices</string>
    <string name="app_name">BedSense</string>
    <string name="photo_gallery">Photo albums to obtain</string>
    <string name="take_photo">Taking pictures</string>
    <string name="wechat">WeChat</string>
    <string name="wechat_circle">Circle of friends</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ space.</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="cannot_be_empty">NOT NULL</string>
    <string name="please_wait">Please later...</string>
    <string name="network_unbale">Network unavailable</string>
    <string name="information_acquisition_fails">Load failed</string>
    <string name="text_loading">Under load...</string>
    <string name="text_blue_shebei">Bluetooth D</string>
    <string name="text_scan_near_d">Scanning nearby equipment</string>
    <string name="btn_back">BACK</string>
    <string name="btn_save">save</string>
    <string name="btn_quick">quick</string>
    <string name="btn_trimming">trimming</string>
    <string name="btn_anmo">massage</string>
    <string name="btn_light">lamplight</string>
    <string name="text_bluetooth_not_on">Bluetooth not on</string>
    <string name="open_bluetooth">1. Click the > setting in the upper right corner to open bluetooth</string>
    <string name="open_in_bluetooth">2. Set > - universal - bluetooth, enter and open bluetooth</string>
    <string name="scan_qr_download">Scan above the qr code, download the world electrical appliances</string>
    <string name="zhuanye_anmo">Professional massage for health</string>
    <string name="shebei_lianjie">Connected devices</string>
    <string name="my_erweima">My qr code</string>
    <string name="no_renzheng">unverified</string>
    <string name="text_is_zhendong">Is the key vibrating</string>
    <string name="no_setting">Is not set</string>
    <string name="unclickscan">DISCONNECT</string>
    <string name="language_switch">language switch</string>
    <string name="use_function">instructions</string>
    <string name="version_code">version</string>
    <string name="status">status：</string>
    <string name="call_phone">call</string>
    <string name="contect">connection...</string>
    <string name="share_to">share to</string>
    <string name="message_pinlv">Massage frequency</string>
    <string name="head_massage">head massage</string>
    <string name="footer_massage">Foot massage</string>
    <string name="watch_tv">Watching TV</string>
    <string name="choose_lan">language switch</string>
    <string name="finish">finish</string>
    <string name="clickscan">CONNECT</string>
    <string name="check_no_contect">Failed to connect hc-08 bluetooth device detected</string>
    <string name="i_konw">got it</string>
    <string name="setting">setting</string>
    <string name="aoto_contect">Auto connect...</string>
    <string name="no_press">Zero pres</string>
    <string name="sleep">Sleep</string>
    <string name="dyao">Lumbar</string>
    <string name="music">Music</string>
    <string name="M1">M1</string>
    <string name="M2">M2</string>
    <string name="relax">Leg Relax</string>
    <string name="yijian_fuyuan">recovery</string>
    <string name="back">BACK</string>
    <string name="hip">hip</string>
    <string name="contected">contected</string>
    <string name="quanshen">whole body \ncirculation</string>
    <string name="tunbu">hip circulation</string>
    <string name="beitui">Back leg circulation</string>
    <string name="yaoxun">waist circulation</string>
    <string name="tou">head circulation</string>
    <string name="jiaobu">leg circulation</string>
    <string name="head">head</string>
    <string name="footer">footer</string>
    <string name="zt">rise and fall</string>
    <string name="yao">WAIST</string>
    <string name="bt">back and leg</string>
    <string name="no_contect">bluetooth device is not connected</string>
    <string name="bluetooth_status">Bluetooth state</string>
    <string name="get_permission">Gets the current location permission</string>
    <string name="setting_permission">In - application Settings - permissions - allow the application to obtain mobile location permissions</string>
    <string name="open">Immediately open</string>
    <string name="back_adjust_down">It has been adjusted to the maximum</string>


    <string name="text_shushi"> </string>
    <string name="text_haohua">Luxury</string>
    <string name="text_lianjie">LinkBluetooth</string>
    <string name="text_up">RISE</string>
    <string name="text_down">DECLINE</string>
    <string name="lift">LIFT</string>
</resources>
