<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.sddq.sophie.view.TranslucentActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sddq.sophie.view.NoScrollViewPager
            android:id="@+id/vp_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_tabs" />

        <LinearLayout
            android:id="@+id/bottom_tabs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_hui"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/tab1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

                <TextView
                    android:id="@+id/tab1_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/btn_quick"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

                <TextView
                    android:id="@+id/tab2_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/btn_trimming"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

                <TextView
                    android:id="@+id/tab3_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/btn_anmo"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

                <TextView
                    android:id="@+id/tab4_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/btn_light"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>