<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.fenmenbielei.bedsense.view.ProlateItemSwitchView
            android:id="@+id/item_tongbukz"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:layout_marginTop="10dp"
            app:title="@string/tongbukz_on"
            android:visibility="gone"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/img_default_bg">

            <com.dinuscxj.progressbar.CircleProgressBar
                android:id="@+id/custom_progress4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:draw_progress_text="false"
                app:progress_background_color="#E9B14F"
                app:progress_end_color="#E9B14F"
                app:progress_shader="sweep"
                app:progress_start_color="#E9B14F"
                app:progress_stroke_cap="round"
                app:progress_stroke_width="6dp"
                app:style="solid_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_anjian_top_icon"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_yijiankandianshi" />

                <TextView
                    android:id="@+id/text_anjian_top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watch_tv"
                    android:textColor="@color/green"
                    android:textSize="15sp" />
            </LinearLayout>
        </FrameLayout>



        <!-- 记忆区域 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/jiyi_margin_sides"
            android:layout_marginRight="@dimen/jiyi_margin_sides">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.fenmenbielei.bedsense.view.JiyiView
                    android:id="@+id/view_jiyi1"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:orientation="horizontal"
                    app:title="@string/jiyi1"
                    app:bgnormal="@drawable/ic_home_hhk"
                    app:bgselected="@drawable/ic_home_ssk"
                    />

            </LinearLayout>

            <View
                android:layout_width="@dimen/jiyi_middle"
                android:layout_height="match_parent"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.fenmenbielei.bedsense.view.JiyiView
                    android:id="@+id/view_jiyi2"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:orientation="horizontal"
                    app:title="@string/jiyi2"
                    app:bgnormal="@drawable/ic_home_hhk"
                    app:bgselected="@drawable/ic_home_ssk"
                    />

            </LinearLayout>


        </LinearLayout>

        <!-- 以下按键区域-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">


            <com.fenmenbielei.bedsense.view.AnjianYuanView
                android:id="@+id/view_kandianshi"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:bgnormal="@drawable/ic_kuaijie_normal"
                app:bgselected="@drawable/ic_kuaijie_selected"
                app:icon="@drawable/ic_yijiankandianshi"
                app:title="@string/kandianshi"
                android:layout_weight="1"
                />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>


            <com.fenmenbielei.bedsense.view.AnjianYuanView
                android:id="@+id/view_lingyali"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                app:bgnormal="@drawable/ic_kuaijie_normal"
                app:bgselected="@drawable/ic_kuaijie_selected"
                app:icon="@drawable/ic_lingyalizhuangtai"
                app:title="@string/kandianshi"
                android:layout_weight="1"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <com.fenmenbielei.bedsense.view.AnjianYuanView
                android:id="@+id/view_zhihan"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                app:bgnormal="@drawable/ic_kuaijie_normal"
                app:bgselected="@drawable/ic_kuaijie_selected"
                app:icon="@drawable/ic_shuimianmoshi"
                app:title="@string/zhihan"
                android:layout_weight="1"
                />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>


            <com.fenmenbielei.bedsense.view.AnjianYuanView
                android:id="@+id/view_fuyuan"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                app:bgnormal="@drawable/ic_kuaijie_normal"
                app:bgselected="@drawable/ic_kuaijie_selected"
                app:icon="@drawable/ic_yijianfuyuan"
                app:title="@string/fuyuan"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>