<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context="com.fenmenbielei.bedsense.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            android:src="@mipmap/ic_launcher" />
        <RelativeLayout
            android:id="@+id/tv_lianjie"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="97dp"
            android:background="@drawable/ic_kuaijie_normal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_lianjie"
                android:textColor="@color/text_write"
                android:textSize="17.5sp" />

        </RelativeLayout>
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/tv_shushi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:background="@drawable/ic_main_bg"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_shushi"
                android:textColor="@color/text_write"
                android:textSize="17.5sp" />

        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/tv_haohua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:background="@drawable/ic_main_bg"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_haohua"
                android:textColor="@color/text_write"
                android:textSize="17.5sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
