<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.fenmenbielei.bedsense.view.ProlateItemSwitchView
            android:id="@+id/item_tongbukz"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:layout_marginTop="10dp"
            app:title="@string/tongbukz_on"
            android:visibility="gone"/>


        <FrameLayout
            android:id="@+id/layout_head"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_top_donghua">

            <com.dinuscxj.progressbar.CircleProgressBar
                android:id="@+id/custom_progress4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:draw_progress_text="false"
                app:progress_background_color="@color/color_F9D577"
                app:progress_end_color="#E9B14F"
                app:progress_shader="sweep"
                app:progress_start_color="#E9B14F"
                app:progress_stroke_cap="round"
                app:progress_stroke_width="6dp"
                app:style="solid_line" />

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_anjian_top_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_beibu" />

                <TextView
                    android:id="@+id/text_anjian_top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beibutiaozheng"
                    android:textColor="@color/green"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textSize="15sp" />
            </LinearLayout>
        </FrameLayout>

        <!-- 调整 -->
        <LinearLayout
            android:id="@+id/layout_tiaozheng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.fenmenbielei.bedsense.view.AnjianWeitiaoView
                    android:id="@+id/view_beibutiaozheng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/weitiao_marin"
                    android:layout_marginTop="@dimen/weitiao_marin"
                    android:layout_marginRight="@dimen/weitiao_marin"
                    app:bgnormal="@drawable/bg_kuaijie_normal"
                    app:icon="@drawable/ic_beibu"
                    app:title="@string/beibutiaozheng"
                    android:layout_weight="1"/>

                <com.fenmenbielei.bedsense.view.AnjianWeitiaoView
                    android:id="@+id/view_tuibutiaozheng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/weitiao_marin"
                    android:layout_marginRight="@dimen/weitiao_marin"
                    android:layout_marginTop="@dimen/weitiao_marin"
                    app:bgnormal="@drawable/bg_kuaijie_normal"
                    app:icon="@drawable/ic_jiaobu"
                    app:title="@string/tuibutiaozheng"
                    android:layout_weight="1"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>